--- a/style.css
+++ b/style.css
@@ -66,11 +66,14 @@ header {
   width: 100%;
   display: block;
   margin: 0px auto;
-  margin-top: 148px;
   position: relative;
   text-align: center;
 }
 
+#map {
+  width: 100%;
+  height: 100%;
+}
 
 /* -------------------------------------------------------------------------- */
 .cont {
