--- a/style.css
+++ b/style.css
@@ -72,14 +72,6 @@ header {
 
 #map {
   width: 100%;
-  height: 100%;
-}
-
-/* -------------------------------------------------------------------------- */
-.cont {
-  width: 1280px;
-  margin: 0 auto;
-  padding-top: 130px;
-  padding-bottom: 130px;
+  height: 900px;
 }
 
