--- a/style.css
+++ b/style.css
@@ -25,11 +25,14 @@ header {
 }
 
 /* Links inside the navbar */
+#logo img {
+  padding: 14px 16px;
+}
+
 .navbar a {
   float: left;
   color: white;
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
 }
 
