--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ header {
 /* Navbar container */
 .navbar {
   overflow: hidden;
-  font-family: 'Noto Sans KR';
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
@@ -73,6 +72,7 @@ header {
 /* 메인 */
 .maincont {
   width: 100%;
+  top: 70px;
   display: block;
   margin: 0px auto;
   position: relative;
@@ -84,3 +84,38 @@ header {
   height: 100vh;
 }
 
+.maincont .title {
+  font-size: 20px;
+  font-weight: 600;
+  color: black;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding-top: 55px;
+  padding-bottom: 30px;
+  text-align: left;
+}
+
+.maincont table {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  border-top: 1px solid #DEE2E6;
+  border-collapse: collapse;
+}
+
+th, td {
+  text-align: left;
+  padding: 15px;
+  border-bottom: 1px solid #DEE2E6;
+  color: #495057;
+}
+
+th {
+  font-size: 13px;
+  background-color: #F8F9FA;
+}
+
+td {
+  font-size: 14px;
+}
