--- a/style.css
+++ b/style.css
@@ -91,9 +91,27 @@ header {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  padding-top: 50px;
-  padding-bottom: 25px;
+  padding-top: 45px;
+  padding-bottom: 20px;
   text-align: left;
+}
+
+.maincont .title2 {
+  font-size: 18px;
+  font-weight: 600;
+  color: black;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding-top: 48px;
+  padding-bottom: 20px;
+  text-align: left;
+}
+
+.title2 img {
+  float: left;
+  width: 26px;
+  height: 26px;
 }
 
 .maincont table {
@@ -124,7 +142,7 @@ td {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  padding-top: 10px;
+  padding-top: 15px;
 }
 
 .num {
