--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ header {
   margin: 0px auto;
   position: relative;
   text-align: center;
+  margin-bottom: 125px;
 }
 
 #map {
@@ -235,3 +236,17 @@ td {
   border-radius: 4px;
   box-shadow: #3c64b1 0 0 3px;
 }
+
+/*팝업*/
+.md {position:fixed;top:0;left:0;width:100%;height:100%;display:none;}
+.md .bg {position:absolute;top:0;left:0;width:100%;height:100%;background:#000;opacity:.5;filter:alpha(opacity=50);z-index:20000;}
+.md .fg {position:absolute;top:50%;left:50%;width:400px;margin:-150px 0 0 -200px;padding:30px;background:#fff;border-radius:4px;z-index:20000;}
+
+.fgin .mdtitle {text-align:left;display:block;margin-bottom:25px;}
+.fgin .left {font-size:12px;width:30%;float:left;color:#737B7D;height:24px;}
+.fgin .right {font-size:13px;width:67%;float:left;color:#495057;margin-bottom:15px;height:24px;}
+.fgin .right2 {font-size:12px;width:67%;float:left;color:#495057;height:18px;margin-bottom:15px;}
+
+.cancel, .ok {width: 49%;margin-top:25px;height:40px;border-radius:4px;}
+.cancel {float:left; color:#292D32; background-color:#F5F5F5; border:none;}
+.ok {float:right; color:white; background-color:#3C64B1; border:none;}
